# ViToSA-Dataset

./: README.md  setup.cfg
vitosa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vitosa_pipeline/: vitosa_pipeline.py
