[metadata]
name = vitosa
version = 1.0.0.post2
author = Luan Thanh Nguyen
author_email = luannt@uit.edu.vn
description = Vietnamese Audio-based Toxic Spans Detection Pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tarudesu/ViToSA-1.0
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Developers
keywords = toxic detection, vietnamese, NLP, transformers, audio
project_urls =
    Documentation = https://github.com/tarudesu/ViToSA-1.0#readme
    Source = https://github.com/tarudesu/ViToSA-1.0
    Tracker = https://github.com/tarudesu/ViToSA-1.0/issues
